modules/gdscript/tests/scripts/analyzer/errors/access_level_protected_func_outside.gd
@private

class Foo:
    protected func foo():
        pass

func test():
    Foo.new().foo()
